--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of PDF</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Gender Stereotyping and Affective Attitudes Towards Science in Chinese Secondary School Students</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -269,7 +269,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                        <a class="btn btn-primary btn-lg" href="assets/documents/Zombies.pdf" target="_blank" alt="...">Click here to open this PDF in a new window</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
+                                        <a class="btn btn-primary btn-lg" href="assets/documents/Gender Stereotyping and Affective Attitudes Towards Science in Chinese Secondary School Students.pdf" target="_blank" alt="...">Click here to open this PDF in a new window</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4"><br>You can also add a PDF the same way you add an image.  Just write where to find the PDF that you have uploaded and like the video and images, replace this text with what is significant about this reading. Target blank allows the PDF to open in a new window.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
