Update index #2 - Carly
Added the video title + more information in the summary to further elaborate significance.

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Video Title</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Gender Sterotypes and Education</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -239,7 +239,7 @@
                                     <!-- Portfolio Modal - Video-->
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/nrZ21nD9I-0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> This short clip summarizes the impact of gender sterotypes on girls and boys starting from a young age and how these sterotypes eventually lead them to their future career. </p>
+                                    <p class="mb-4"> This short clip summarizes the impact of gender sterotypes on girls and boys starting from a young age and how these sterotypes eventually lead them to their future career. However, in this video it focuses primarliy on just males and females, and not LGBTQ+ individuals and how they respond to these types of sterotypes. From my own reasearch, I found that having a safe spot to be yourself drastically improves mental health no matter your background and the sterotypes placed on you. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
