--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/SJImage5.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/PLANUSA.png" alt="..." />
                         </div>
                     </div>
                     <!-- Involved Item 6-->
@@ -325,7 +325,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 5</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Planusa: Gender and Youth Equality</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -333,9 +333,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage5.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/PLANUSA.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public..</p>
+                                    <p class="mb-4"><a href=”https://www.planusa.org/our-work/what-we-focus-on/gender-youth-equality/?gclid=91c5cf93e4cf14170418ac1c69d40faa&gclsrc=3p.ds&msclkid=91c5cf93e4cf14170418ac1c69d40faa ”>PlanUSA </a> is an organization that advocates girls’ rights, and they partner with adolescent girls, children and young women to overcome oppression and gender inequality. They help challenge social norms by supporting girls and boys to think differently about gender and the harmful impact of gender norms. They have programs that encourage girls to promote equality and their internal power, and enable boys to self-reflect and identify the detrimental consequences of toxic masculinity. You can help out by donating at the link above!</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
