--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Donna McAlpine for more infomation on the effects of gender roles on children, and what you can do to help</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
@@ -335,7 +335,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/PLANUSA.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"><a href=”https://www.planusa.org/”>PlanUSA </a> is an organization that advocates girls’ rights, and they partner with adolescent girls, children and young women to overcome oppression and gender inequality. They help challenge social norms by supporting girls and boys to think differently about gender and the harmful impact of gender norms. They have programs that encourage girls to promote equality and their internal power, and enable boys to self-reflect and identify the detrimental consequences of toxic masculinity. You can help out by donating at the link above!</p>
+                                    <p class="mb-4">Gender roles perpetuate inequality and greatly affect minorities that oftentimes lack the power to reject or challenge them. <a href=”https://www.planusa.org/ ” >PlanUSA </a> is an organization that advocates girls’ rights, and they partner with adolescent girls, children, and young women to overcome oppression and gender inequality. They help challenge social norms by supporting girls and boys to think differently about gender and the harmful impact of gender norms. They have programs that encourage girls to promote equality and their internal power, and enable boys to self-reflect and identify the detrimental consequences of toxic masculinity.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
