--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact Donna McAlpine for more infomation on the effects of gender roles on children, and what you can do to help</p></div>
+                    <div class="col-sm"><p>Contact Donna McAlpine for more infomation on the effects of gender roles on children</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
