--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/PLANUSA.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/PLANUSA.png" alt="..." /> <a href="https://www.planusa.org/" </a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Gender roles perpetuate inequality and greatly affect minorities that oftentimes lack the power to reject or challenge them. <a href=”https://www.planusa.org/ ” >PlanUSA </a> is an organization that advocates girls’ rights, and they partner with adolescent girls, children, and young women to overcome oppression and gender inequality. They help challenge social norms by supporting girls and boys to think differently about gender and the harmful impact of gender norms. They have programs that encourage girls to promote equality and their internal power, and enable boys to self-reflect and identify the detrimental consequences of toxic masculinity.</p>
+                                    <p class="mb-4">Gender roles perpetuate inequality and greatly affect minorities that oftentimes lack the power to reject or challenge them. PlanUSA is an organization that advocates girls’ rights, and they partner with adolescent girls, children, and young women to overcome oppression and gender inequality. They help challenge social norms by supporting girls and boys to think differently about gender and the harmful impact of gender norms. They have programs that encourage girls to promote equality and their internal power, and enable boys to self-reflect and identify the detrimental consequences of toxic masculinity.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
