--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/PLANUSA.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/PLANUSA.png" alt="..." /> <a href="https://www.planusa.org/" </a>
                         </div>
                     </div>
                     <!-- Involved Item 6-->
@@ -325,7 +325,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Planusa: Gender and Youth Equality</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Planusa: Gender and Youth Equality</h2> 
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -333,7 +333,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/PLANUSA.png" alt="..." /> <a href="https://www.planusa.org/" </a>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/PLANUSA.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Gender roles perpetuate inequality and greatly affect minorities that oftentimes lack the power to reject or challenge them. PlanUSA is an organization that advocates girls’ rights, and they partner with adolescent girls, children, and young women to overcome oppression and gender inequality. They help challenge social norms by supporting girls and boys to think differently about gender and the harmful impact of gender norms. They have programs that encourage girls to promote equality and their internal power, and enable boys to self-reflect and identify the detrimental consequences of toxic masculinity.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
