--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/PLANUSA.png" alt="..." /> <a href="https://www.planusa.org/" </a>
+                                   <a class="btn btn-primary btn-lg" href="https://www.planusa.org/" target="_blank"> Click here to open link in new window</a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Gender roles perpetuate inequality and greatly affect minorities that oftentimes lack the power to reject or challenge them. PlanUSA is an organization that advocates girls’ rights, and they partner with adolescent girls, children, and young women to overcome oppression and gender inequality. They help challenge social norms by supporting girls and boys to think differently about gender and the harmful impact of gender norms. They have programs that encourage girls to promote equality and their internal power, and enable boys to self-reflect and identify the detrimental consequences of toxic masculinity.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
