--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/portfolio/ISSfront.png" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">How Gender Roles Affect Children in Schooling</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">How Gender Roles Affect Children in Schooling?</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -48,7 +48,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">And Why It Matters</p>
+                <p class="masthead-subheading font-weight-light mb-0">And Why It Matters?
+                Gender roles in school are important because it teaches kids to explore their identitties, sef confidence, and social interactions.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
