--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/portfolio/ISSfront.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/img/portfolio/Screen Shot 2022-12-09 at 3.20.02 PM.png" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">How Gender Roles Affect Children in Schooling?</h1>
                 <!-- Icon Divider-->
