--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">And Why It Matters?
-                Gender roles in school are important because it teaches kids to explore their identitties, sef confidence, and social interactions.</p>
+                Gender roles in school are important because it teaches kids to explore their identitties, self-confidence, and social interactions.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
