--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">And Why It Matters?
+                <p class="masthead-subheading font-weight-light mb-0">Why It Matters:
                 Gender roles in school are important because it teaches kids to explore their identitties, self-confidence, and social interactions.</p>
             </div>
         </header>
