--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/SJImage6.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/Screen Shot 2022-12-09 at 3.40.51 PM.png" alt="..." />
                         </div>
                     </div>
                 </div>
