--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Carly Clos</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Donna McAlpine for more infomation on PlanUSA, and how gender roles affect children.</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
@@ -335,7 +335,7 @@
                                     <!-- Portfolio Modal - Image-->
                                    <a class="btn btn-primary btn-lg" href="https://www.planusa.org/" target="_blank"> Click here to open link in new window</a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Gender roles perpetuate inequality and greatly affect minorities that oftentimes lack the power to reject or challenge them. PlanUSA is an organization that advocates girls’ rights, and they partner with adolescent girls, children, and young women to overcome oppression and gender inequality. They help challenge social norms by supporting girls and boys to think differently about gender and the harmful impact of gender norms. They have programs that encourage girls to promote equality and their internal power, and enable boys to self-reflect and identify the detrimental consequences of toxic masculinity.</p>
+                                    <p class="mb-4">Gender roles perpetuate inequality and greatly affect minorities that oftentimes lack the power to reject or challenge them. PlanUSA is an organization that advocates girls’ rights, and they partner with adolescent girls, children, and young women to overcome oppression and gender inequality. They help challenge social norms by supporting girls and boys to think differently about gender and the harmful impact of gender norms. They have programs that encourage girls to promote equality and their internal power, and enable boys to self-reflect and identify the detrimental consequences of toxic masculinity. Encouraging young women that they’re just as capable as men helps lower the pay gap, occupational segregation, and denial of promotions to leadership. Moreover it removes the glass ceiling in different professions, decreases the casualization of women workers, and increases the levels of equation and work opportunities given to them. It’s important that we question and deny gender roles and stereotypes in order to create a more equal and fair society.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
