changes to image, contact info, and description

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/SJImage4.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/Screen Shot 2022-12-11 at 10.46.44 PM.png" alt="..." />
                         </div>
                     </div>
                     <!-- Involved Item 5-->
@@ -154,7 +154,7 @@
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Julianna Geary</p></div>
+                    <div class="col-sm"><p> Contact Julianna Geary for more information on gender stereotyping calls to action and significance.</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
@@ -301,9 +301,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage4.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Screen Shot 2022-12-11 at 10.46.44 PM.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">In the article I used for my research, there was information provided about local support groups to help fight gender diversity. This is a common issue seen across the United States and we must fight it. Thus, these groups are created. This article particularly encounters youth gender diversity and ways of helping this crisis. Being in the 21st centure has brough a lot of change to this area for the better and has shown a tremendous decrease of this diversity issue.</p>
+                                    <p class="mb-4">In the article I used for my research, there was information provided about local support groups to help fight gender diversity. This is a common issue seen across the United States and we must fight it. Thus, these groups are created. This article particularly encounters youth gender diversity and ways of helping this crisis. Being in the 21st century has brough a lot of change to this area for the better and has shown a tremendous decrease of this diversity issue. This matters towrds the social development of our country. With resources like this, it can help to reduce gender stereotyping and those who are affected by it.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
