Halle's Pull Request
Corrected typos, Halle's contact info, and rewording of title page.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/portfolio/ISSfront.png" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Title of Our Project</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">How Gender Roles Affect Children in Schooling</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -48,7 +48,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">And Why It Matters</p>
+                <p class="masthead-subheading font-weight-light mb-0">:Why It Matters: 
+                Gender roles can heavily impact self-perception, identity, confidence, and social interactions, especially when they are enforced at a highly developmental age. </p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -239,7 +240,7 @@
                                     <!-- Portfolio Modal - Video-->
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/-C_onGQhiqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">You can also embed Youtube videos by clicking share on a youtube video, copy and past the iframe and insert it as I have above. In place of this tutorial, talk about what is significant about this video. You should also include any necessary content warnings which may include graphic detail, violence, strobe lights, etc. </p>
+                                    <p class="mb-4"> This short clip summarizes the impact of gender stereotypes on young girls and boys and how these sterotypes impact their future career. However, this video primarily focuses on just males and females, and not LGBTQ+ individuals and how they respond to these types of stereotypes. From my own reasearch, I found that having a safe spot to be yourself drastically improves mental health no matter your background and the stereotypes placed on you. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
