--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Why It Matters:
-                Gender roles in school are important because it teaches kids to explore their identitties, self-confidence, and social interactions.</p>
+                Gender roles in school are important because it teaches kids to explore their identities, self-confidence, and social interactions.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -157,7 +157,7 @@
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Bhuvana Bhamidipati for more infomation on Why Gender Roles in Schools Matter. x</p></div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
