--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <!-- Masthead Subheading-->
 
-                <p class="masthead-subheading font-weight-light mb-0">:Why It Matters: 
+                <p class="masthead-subheading font-weight-light mb-0"> Why It Matters: 
                 Gender roles can heavily impact self-perception, identity, confidence, and social interactions, especially when they are enforced at a highly developmental age. </p>
             </div>
         </header>
@@ -155,7 +155,7 @@
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact Halle Mikula at mikulaha@msu.edu for more information on how teachers can perpetuate negative gender roles. x</p></div>
+                    <div class="col-sm"><p>Contact Halle Mikula for more information on how teachers can perpetuate negative gender roles. x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
@@ -231,7 +231,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Gender Sterotypes and Education</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Gender Stereotypes and Education</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
