--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                 </div>
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact Halle Mikula for more information on how teachers can perpetuate negative gender roles. x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Carly Clos for more infomation on Gender stereotypes and education (video).</p></div>
+                    <div class="col-sm"><p>Contact Halle Mikula for more information on how teachers can perpetuate negative gender roles. </p></div>
+                    <div class="col-sm"><p>Contact Donna McAlpine for more infomation on Planusa, and how you can get involved.</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
