--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="col-sm"><p>Contact Carly Clos for more infomation on Gender stereotypes and education (video).</p></div>
                     <div class="col-sm"><p>Contact Halle Mikula for more information on how teachers can perpetuate negative gender roles. </p></div>
                     <div class="col-sm"><p>Contact Donna McAlpine for more infomation on Planusa, and how you can get involved.</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Aadit Mandal for more information on the impact of alcohol and premature sex on gender roles in education x</p></div>
                     <div class="col-sm"><p>Contact Bhuvana Bhamidipati for more infomation on Why Gender Roles in Schools Matter. x</p></div>
                 </div>
                 <div class="row justify-content-center">
