--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
-                <div class="container"><p> Gender roles can affect children in schooling in a number of ways. For example, traditional gender roles can lead to children being encouraged to pursue certain subjects or careers based on their gender, rather than their interests or abilities. This can limit children's options and make it more difficult for them to achieve their full potential. Additionally, gender roles can create stereotypes that can affect how children are treated by their teachers and peers, and can lead to discrimination and unequal treatment. This can make it more difficult for children to learn and succeed in school.</p>
+                <div class="container"><p> Gender roles can affect children in schooling in a number of ways. For example, traditional gender roles can lead to children being encouraged to pursue certain subjects or careers based on their gender, rather than their interests or abilities. This can limit children's options and make it more difficult for them to achieve their full potential. Additionally, gender roles can create stereotypes that can affect how children are treated by their teachers and peers, and can lead to discrimination and unequal treatment. This can make it more difficult for children to learn and succeed in school. </p>
                 </div>
                 </div>
                 <!-- About Section Button-->
@@ -156,7 +156,7 @@
                     <div class="col-sm"><p>Contact Carly Clos for more infomation on Gender stereotypes and education (video).</p></div>
                     <div class="col-sm"><p>Contact Halle Mikula for more information on how teachers can perpetuate negative gender roles. </p></div>
                     <div class="col-sm"><p>Contact Donna McAlpine for more infomation on Planusa, and how you can get involved.</p></div>
-                    <div class="col-sm"><p>Contact Aadit Mandal for more information on the impact of alcohol and premature sex on gender roles in education </p></div>
+                    <div class="col-sm"><p>Contact Aadit Mandal for more information on the impact of alcohol and premature sex on gender roles in education. </p></div>
                     <div class="col-sm"><p>Contact Bhuvana Bhamidipati for more infomation on Why Gender Roles in Schools Matter. </p></div>
                 </div>
                 <div class="row justify-content-center">
@@ -164,7 +164,7 @@
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact Gage Battle for more infomation on why the issue of gender roles affecting children in schooling is importantx</p></div>
+                    <div class="col-sm"><p>Contact Gage Battle for more infomation on why the issue of gender roles affecting children in schooling is important. </p></div>
                 </div>
             </div>
         </section>
@@ -240,7 +240,7 @@
                                     <!-- Portfolio Modal - Video-->
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/nrZ21nD9I-0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> This short clip summarizes the impact of gender stereotypes on young girls and boys and how these sterotypes impact their future career. However, this video primarily focuses on just males and females, not LGBTQ+ individuals and how they respond to these types of stereotypes. From my own reasearch, I found that having a safe spot to be yourself drastically improves mental health no matter your background and the stereotypes placed on you. </p>
+                                    <p class="mb-4"> This short clip summarizes the impact of gender stereotypes on young girls and boys and how these sterotypes impact their future career. However, this video primarily focuses on just males and females, not LGBTQ+ individuals and how they respond to these types of stereotypes. From my own research, I found that having a safe spot to be yourself drastically improves mental health no matter your background and the stereotypes placed on you. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
