--- a/index.html
+++ b/index.html
@@ -139,10 +139,9 @@
                     <p> Further, studies have shown that the enforcing of gender roles can be detrimental to both mental and physical health. Fawcett's Report of the Commission on Gender Stereotypes in Early Childhood (2020) showed that gender roles are linked to higher suicide rates for men, a high prevalance of eating disorders and self-harm in women, and assault of women. The harmful gender roles that cause these effects--in these situations, namely "masculinity" culture and an emphasis on appearance for women--often begin in the home and the classroom. </p>
                     <p> The consequences of enforcing gender roles in schools are serious: people of all gender identities are being seriously harmed. The normalization and continuation of gender roles is a danger to the mental and physical health of the public. We must break the cycle. While there is no flawless or easy way to do so, there are small steps we can take as a society to work towards acheiving an inclusive school environment that does not push harmful gender roles. Such steps include: 
                     <ul>
-  <li>First item</li>
-  <li>Second item</li>
-  <li>Third item</li>
-  <li>Fourth item</li>
+  <li>Briefing educators on the consequences of enforcing gender roles--most educators do not receive such training at all (Fawcett 2020) </li>
+  <li>Advising educators to avoid teaching materials that perpetuate harmful stereotypes</li>
+  <li>Helping educators foster a safe space within their classrooms through inclusive language and a welcoming atmosphere</li>
 </ul></p>
                 </div>
                 </div>
