--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact Julianna Geary for more information on gender stereotyping calls to action and significance.</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Mikayla Thon for more information on how gender roles can impact people of various gender identities. </p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact Gage Battle for more infomation on why the issue of gender roles affecting children in schooling is important. </p></div>
