--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                 </div>
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact Carly Clos for more infomation on Gender stereotypes and education (video).</p></div>
-                    <div class="col-sm"><p>Contact Halle Mikula for more information on how teachers can perpetuate negative gender roles. </p></div>
+                    <div class="col-sm"><p>Contact Carly Clos for more infomation on gender stereotypes and education (video).</p></div>
+                    <div class="col-sm"><p>Contact Halle Mikula for more information on how teachers perpetuate negative gender roles. </p></div>
                     <div class="col-sm"><p>Contact Donna McAlpine for more infomation on PlanUSA, and how you can get involved.</p></div>
                     <div class="col-sm"><p>Contact Aadit Mandal for more information on the impact of alcohol and premature sex on gender roles in education. </p></div>
                     <div class="col-sm"><p>Contact Bhuvana Bhamidipati for more infomation on Why Gender Roles in Schools Matter. </p></div>
