--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Gender Stereotyping and Affective Attitudes Towards Science in Chinese Secondary School Students</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Gender Stereotyping and Affective Attitudes Towards Science in Chinese Secondary School Students</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
