--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                     <!-- Portfolio Modal - Video-->
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/nrZ21nD9I-0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> This short clip summarizes the impact of gender stereotypes on young girls and boys and how these sterotypes impact their future career. However, this video primarily focuses on just males and females, not LGBTQ+ individuals and how they respond to these types of stereotypes. From my own research, I found that having a safe spot to be yourself drastically improves mental health no matter your background and the stereotypes placed on you. </p>
+                                    <p class="mb-4"> This short clip summarizes the result of gender stereotypes on young girls and boys and how these stereotypes can impact their future career. However, this video primarily focuses on just men and women, not those who fit outside of such a binary, such as some in the LGBTQ+ community. From my own research, I found that having a safe spot to be yourself drastically improves mental health no matter your background and the stereotypes placed on you. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
