--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/portfolio/Screen Shot 2022-12-09 at 3.20.02 PM.png" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">How Gender Roles Affect Children in Schooling</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">How Gender Roles and Stereotypes Affect Children in Schooling</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -49,7 +49,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0"> Why It Matters: 
-                Gender roles can heavily impact self-perception, identity, confidence, and social interactions, especially when they are enforced at a highly developmental age. </p>
+                Gender roles and stereotypes can heavily impact self-perception, identity, confidence, and social interactions, especially when they are enforced at a highly developmental age. </p>
             </div>
         </header>
         <!-- Portfolio Section-->
