--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Screen Shot 2022-12-09 at 3.40.51 PM.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> em. Stonewall stands for "lesbian, gay, bi, trans, queer, questioning and ace (LQBTQ+) people everywhere." Stonewall represents a global movement supporting LQBTQ+ people everywhere and their allies.  .</p>
+                                    <p class="mb-4"> <em> Stonewall </em> stands for "lesbian, gay, bi, trans, queer, questioning and ace (LQBTQ+) people everywhere." Stonewall represents a global movement supporting LQBTQ+ people everywhere and their allies.  .</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
