--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Screen Shot 2022-12-09 at 3.40.51 PM.png" alt="..." />
+                                    <a class="btn btn-primary btn-lg" href="https://www.stonewall.org.uk" target="_blank"> Click here to open link in new window</a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4"> <em> Stonewall </em> stands for "lesbian, gay, bi, trans, queer, questioning and ace (LQBTQ+) people everywhere." Stonewall represents a global movement supporting LQBTQ+ people everywhere and their allies.  .</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
