--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <h4 class="text-uppercase mb-4">Organizations</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="https://www.instagram.com/plan_usa/"></i></a>
                     </div>
                 </div>
             </div>
