--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <div class="col-sm"><p>Contact Julianna Geary for more information on gender stereotyping calls to action and significance.</p></div>
                     <div class="col-sm"><p>Contact Mikayla Thon for more information on how gender roles can impact people of various gender identities. </p></div>
                     <div class="col-sm"><p>Contact Nishan Heer for more infomation on gender stereotyping in secondary schools. </p></div>
-                    <div class="col-sm"><p>Contact Elaina Rankin for more infomation on how gender roles impact career choices in college. </p></div>
+                    <div class="col-sm"><p>Contact Elaina Rankin for more infomation on how gender can impact costs and budgeting for higher education. </p></div>
                     <div class="col-sm"><p>Contact Gage Battle for more infomation on why the issue of gender roles affecting children in schooling is important. </p></div>
                 </div>
             </div>
