--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact Elaina Rankin for more information on education</p></div>
+                    <div class="col-sm"><p>Contact Elaina Rankin for more information on how gender roles can impact college cost and budgeting</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
             </div>
